--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LLT 로또번호 결과</title>
-    <link rel="icon" type="image/x-icon" href="src/image/fav.ico">
-    <link rel="stylesheet" href="src/style.css">
+    <link rel="icon" type="image/x-icon" href="/fav.ico"> <!-- 경로 수정 -->
+    <link rel="stylesheet" href="/style.css"> <!-- 경로 수정 -->
 </head>
 <body>
     <!-- 네비게이션 바 -->
     <nav class="navbar">
         <div class="logo">
-            <img src="src/image/llt.png" alt="로고">
+            <img src="/llt.png" alt="로고"> <!-- 경로 수정 -->
         </div>
         <ul class="nav-links">
             <li><a href="/">HOME</a></li>
@@ -20,9 +20,9 @@
         </ul>
         
         <div class="icons">
-            <a href="#"><img src="src/image/jobko.jpeg" alt="JOBKO 아이콘"></a>
-            <a href="#"><img src="src/image/linkedin.png" alt="LinkedIn 아이콘"></a>
-            <a href="#"><img src="src/image/git.png" alt="Github 아이콘"></a>
+            <a href="#"><img src="/jobko.jpeg" alt="JOBKO 아이콘"></a> <!-- 경로 수정 -->
+            <a href="#"><img src="/linkedin.png" alt="LinkedIn 아이콘"></a>
+            <a href="#"><img src="/git.png" alt="Github 아이콘"></a>
         </div>
     </nav>
 
@@ -34,13 +34,14 @@
     </section>
 
     <div id="loading" class="loading-overlay" style="display: none;">
-        <img src="src/image/loading.gif" alt="Loading" class="loading-gif">
+        <img src="/loading.gif" alt="Loading" class="loading-gif"> <!-- 경로 수정 -->
     </div>
 
     <script>
         function showLoadingAndRedirect() {
             document.getElementById('loading').style.display = 'flex';
             setTimeout(function() {
+                console.log("Redirecting to /result...");
                 window.location.href = "/result";  <!-- 수정: result 페이지로 리디렉션 -->
             }, 2000);
         }
