--- a/index.html
+++ b/index.html
@@ -50,6 +50,6 @@
         <img src="src/image/loading.gif" alt="Loading" class="loading-gif">
     </div>
 
-    <script src="src/script.js"></script> <!-- script.js 파일을 제대로 로드 -->
+    <script src="script.js"></script> <!-- script.js 파일을 제대로 로드 -->
 </body>
 </html>
