replace h2 and p tag

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <!-- 결과 출력 영역 -->
     <section id="result-container" style="display:none;">
-        <h2>이번주 번호</h2>
+        <h2>이번주 번호</h2> <!-- 이 태그도 가운데 정렬됨 -->
         <p id="game-info"></p>
         <div id="lotto-results">
             <div class="game-row" id="game1"></div>
