--- a/index.html
+++ b/index.html
@@ -8,19 +8,17 @@
     <link rel="stylesheet" href="src/style.css">
 </head>
 <body>
-    <!-- 네비게이션 바 -->
     <nav class="navbar">
         <div class="logo">
             <a href="index.html"><img src="src/image/llt.png" alt="로고"></a>
         </div>
         <ul class="nav-links">
-            <li><a href="/">HOME</a></li>
+            <li><a href="index.html">HOME</a></li>
             <li><a href="#">RECORD</a></li>
             <li><a href="#">CONTACT</a></li>
             <li><a href="login.html">LOGIN</a></li>
             <li><a href="register.html">REGISTER</a></li>
         </ul>
-        
         <div class="icons">
             <a href="#"><img src="src/image/jobko.jpeg" alt="JOBKO 아이콘"></a>
             <a href="https://www.linkedin.com/in/%EC%9B%90%EB%B9%88-%EB%B0%95-286a6930a/"><img src="src/image/linkedin.png" alt="LinkedIn 아이콘"></a>
@@ -28,14 +26,12 @@
         </div>
     </nav>
 
-    <!-- 메인 콘텐츠 -->
     <section id="main-content" class="main-content">
         <h1>로또 번호 생성기</h1>
         <p>카스트로폴룩스(CASTORPOLLUX) - 행운을 부르는 주문<br>행복해지기를 바라는 누구에게나 혹은 상대방에게 전하는 짧은 주문</p>
         <button class="lotto-btn" onclick="generateLotto()">이번주 번호 뽑기</button>
     </section>
 
-    <!-- 결과 출력 영역 -->
     <section id="result-container" style="display:none;">
         <h2>이번주 번호</h2>
         <p id="game-info"></p>
@@ -48,7 +44,6 @@
         </div>
     </section>
 
-    <!-- 로딩 화면 -->
     <div id="loading" class="loading-overlay" style="display: none;">
         <img src="src/image/loading.gif" alt="Loading" class="loading-gif">
     </div>
