modified design and js

--- a/result.html
+++ b/result.html
@@ -28,30 +28,32 @@
 
     <!-- 메인 콘텐츠 -->
     <section class="main-content">
-        <p id="game-info"></p>
+        <div class="result-wrapper" style="margin-top: 100px;">
+            <p id="game-info" style="margin-bottom: 30px;"></p>
 
-        <div id="lotto-results" class="lotto-results">
-            <div class="game-row">
-                <span>게임 1:</span>
-                <div class="game-numbers" id="game1"></div>
-            </div>
-            <div class="game-row">
-                <span>게임 2:</span>
-                <div class="game-numbers" id="game2"></div>
-            </div>
-            <div class="game-row">
-                <span>게임 3:</span>
-                <div class="game-numbers" id="game3"></div>
-            </div>
-            <div class="game-row">
-                <span>게임 4:</span>
-                <div class="game-numbers" id="game4"></div>
-            </div>
-            <div class="game-row">
-                <span>게임 5:</span>
-                <div class="game-numbers" id="game5"></div>
-            </div>
-        </div> 
+            <div id="lotto-results" class="lotto-results">
+                <div class="game-row">
+                    <span>게임 1:</span>
+                    <div class="game-numbers" id="game1"></div>
+                </div>
+                <div class="game-row">
+                    <span>게임 2:</span>
+                    <div class="game-numbers" id="game2"></div>
+                </div>
+                <div class="game-row">
+                    <span>게임 3:</span>
+                    <div class="game-numbers" id="game3"></div>
+                </div>
+                <div class="game-row">
+                    <span>게임 4:</span>
+                    <div class="game-numbers" id="game4"></div>
+                </div>
+                <div class="game-row">
+                    <span>게임 5:</span>
+                    <div class="game-numbers" id="game5"></div>
+                </div>
+            </div> 
+        </div>
     </section>
 
     <script src="script.js"></script>
